--- a/Portafolio_matias/index.html
+++ b/Portafolio_matias/index.html
@@ -211,8 +211,7 @@
             <h3>Contacto</h3>
 
             <div class="formulario">
-                <iframe src="https://forms.gle/kkezvpn2EgqfQnss8" width="640" height="800" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
-
+                <iframe src="https://forms.gle/kkezvpn2EgqfQnss8" >Formulario</iframe>
             </div>
 
             <div class="fila">
